# 210

./: CMakeLists.txt  README.md
include/: glad.c  shader.h
include/glad/: glad.h
res/: 1_fs.shader  1_vs.shader  fs.shader
src/: color.cpp  main.cpp  main.d  shader.cpp
